app/components/common/molecules/BookInfoCard/BookInfoCard.css
.wrapper {
  font-family: 'Quicksand', sans-serif;
  width: 100%;
  height: fit-content;
  display: flex;
  flex-direction: row;
  background-color: #FEFEFE;
  border-radius: 1.5rem;
  padding: 5%;

  overflow: hidden;
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.book-cover-container {
  flex: 1;
  border-radius: 1rem;
  /* background-color: blue; */
}

.book-cover-container .book-cover {
  /* width: 100%; */
  border-radius: inherit;
}

.book-info-container {
  flex: 2;
  padding: 5% 0 5% 5%;
  display: flex;
  flex-direction: column;

  overflow: hidden;
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.book-title {
  /* font-size: 1.5rem; */
  /* font-size: 1.5rem; */
  font-weight: bold;
  color: #00ABAB;

  overflow: hidden;
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.book-authors {
  /* font-size: 1.25rem; */
  font-weight: bold;
  color: #111111;

  overflow: hidden;
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.book-sub-info {
  /* font-size: 1.25rem; */
  font-weight: 600;
  color: #999999;

  overflow: hidden;
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.test-ap {
  background-color: red;
  width: 100%;
  padding-top: 150%;
  position: relative;
  border-radius: inherit;
  overflow: hidden;
}

.img {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  border-radius: inherit;
}

